--- a/UserInterface/App.xaml
+++ b/UserInterface/App.xaml
@@ -18,6 +18,9 @@
             <DataTemplate DataType="{x:Type viewModel:SearchViewModel}">
                 <view:SearchView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:DetailInformationViewModel}">
+                <view:DetailInformationView/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
