--- a/UserInterface/Views/HomeView.xaml
+++ b/UserInterface/Views/HomeView.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
       xmlns:local="clr-namespace:UserInterface.Views"
       xmlns:viewModel="clr-namespace:UserInterface.ViewModels"
       mc:Ignorable="d" 
@@ -19,6 +20,11 @@
         <StackPanel Orientation="Horizontal">
             <Border Width="400"
                     Height="200">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseLeftButtonUp">
+                        <i:InvokeCommandAction Command="{Binding SearchViewCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0, 0" EndPoint="1, 2">
                         <GradientStop Color="#5bc3ff" Offset="0.0"/>
@@ -37,6 +43,10 @@
                                    FontSize="28"
                                    Margin="20, 10, 10, 0"/>
                     </StackPanel>
+                    <Image Source="/Images/search.png"
+                           Width="192"
+                           Height="192" 
+                           Margin="240,40,-30,-35"/>
                 </Grid>
             </Border>
             <Border Width="200"
@@ -49,6 +59,23 @@
                         <GradientStop Color="#ffb73a" Offset="1"/>
                     </LinearGradientBrush>
                 </Border.Background>
+                <Border.Clip>
+                    <RectangleGeometry RadiusX="10"
+                                       RadiusY="10"
+                                       Rect="0, 0, 200, 200"/>
+                </Border.Clip>
+                <Grid>
+                    <StackPanel>
+                        <TextBlock Text="Конвертація"
+                                   Foreground="White"
+                                   FontSize="28"
+                                   Margin="20, 10, 10, 0"/>
+                    </StackPanel>
+                    <Image Source="/Images/convert.png"
+                           Width="96"
+                           Height="95" 
+                           Margin="94,95,10,10"/>
+                </Grid>
             </Border>
         </StackPanel>
         <StackPanel>
@@ -58,13 +85,20 @@
                        HorizontalAlignment="Left"
                        Margin="0, 10, 0, 20"/>
             <StackPanel HorizontalAlignment="Left">
-                <ListBox Background="Transparent"
+                <ListBox x:Name="List"
+                         Background="Transparent"
                          Foreground="White"
                          ItemsSource="{Binding Assets}"
                          BorderThickness="0"
                          ScrollViewer.VerticalScrollBarVisibility="Auto"
                          ScrollViewer.HorizontalScrollBarVisibility="Auto"
                          Height="150" Width="645">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseLeftButtonUp">
+                            <i:InvokeCommandAction Command="{Binding DetailInforationCommand}"
+                                                   CommandParameter="{Binding ElementName=List, Path=SelectedItem}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                     <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel Orientation="Horizontal"/>
