--- a/UserInterface/Themes/MenuButtonTheme.xaml
+++ b/UserInterface/Themes/MenuButtonTheme.xaml
@@ -4,6 +4,7 @@
            TargetType="{x:Type RadioButton}"
            x:Key="MenuButtonTheme">
         <Style.Setters>
+            <Setter Property="FontSize" Value="14"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="RadioButton">
